# pensieve

./: .gitignore  README.md  install.sh  pyproject.toml
pensieve_cli/: autocomplete.py  env.py  pensieve_cli.py  search.py
